--- a/resume-builder/mobile/src/components/Core/Editor/RightSection/rightSection.scss
+++ b/resume-builder/mobile/src/components/Core/Editor/RightSection/rightSection.scss
@@ -59,7 +59,7 @@
 		bottom: 0;
 		padding: 1rem;
 		background-color: $white;
-		z-index: 1;
+		z-index: 2;
 		width: 100%;
 		left: 0;
 		box-shadow: 0 0 10px $box-shadow-light;
