--- a/resume-builder/mobile/src/components/Core/Home/Banner/banner.scss
+++ b/resume-builder/mobile/src/components/Core/Home/Banner/banner.scss
@@ -33,6 +33,8 @@
          font-size: 1.4rem;
          color: $grey-333;
 
+        display: flex;
+
          &:not(:last-child) {
             margin-bottom: 1rem;
          }
