--- a/resume-builder/mobile/src/styles/components/_margin.scss
+++ b/resume-builder/mobile/src/styles/components/_margin.scss
@@ -2,6 +2,10 @@
     margin-bottom: 1.5rem;
 }
 
+.mb-30 {
+    margin-bottom: 3rem;
+}
+
 
 // Top margin
 .mt-0 {
